--- a/options.html
+++ b/options.html
@@ -8,12 +8,12 @@
 </head>
 
 <body>
-  <label>
+  <label style="display: block; margin-bottom: 10px;">
     <input type="checkbox" id="recovery_code">
     Autofill recovery code
   </label>
 
-  <div id="status"></div>
+  <div style="display: block; margin-bottom: 10px;" id="status"></div>
   <button id="save">Save</button>
 
   <script src="options.js"></script>
